quick bugfix to show correct answer after timeout and allow scrolling in the results to prevent overflows

--- a/css/results.css
+++ b/css/results.css
@@ -1,3 +1,9 @@
+#results-table-wrapper {
+    margin-top: 8px;
+    margin-bottom: 8px;
+    overflow-y: auto;
+}
+
 .operand {
     min-width: 6vmin;
     height: 6vmin;
